[package]
name = "trustdidweb-resolver"
version = "0.1.0"
edition = "2021"
description = "A pure resolver implementation for the DID:TDW (TrustDIDWeb) specification"
license = "Apache-2.0"
readme = "README.md"
keywords = ["did", "decentralized", "identity", "resolution"]
categories = ["cryptography", "authentication"]

[dependencies]
thiserror = "1.0"
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
base58 = "0.2"
sha2 = "0.10"
chrono = { version = "0.4", features = ["serde"] }
serde_json_canonicalizer = "0.3"
multihash = "0.19.1"
reqwest = { version = "0.12", features = ["json"] }
url = "2.5"
tokio = { version = "1.0", features = ["rt", "macros"] }

[dev-dependencies]
tokio = { version = "1.0", features = ["full"] }